--- a/Navigation.Rmd
+++ b/Navigation.Rmd
@@ -50,4 +50,4 @@ knitr::opts_chunk$set(echo = TRUE)
 
 * [15_AllTogether](15_AllTogether.html)
 
-* [M01_Exploring data with visualizations and mapping](https://dailyherald.github.io/flask_crashes/index.html)
+* [M01_Exploring data with visualizations and mapping](https://timbroderick.github.io/flask_crashes/index.html)
